--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ plotly
 pandas
 numpy
 google-generativeai
-
+dotenv
 # Optional
 scipy          # For more advanced signal processing
 matplotlib     # For additional plotting/debug
