--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,8 @@
-# Core
 streamlit
 pyserial
-plotly
-pandas
-numpy
 google-generativeai
-dotenv
-# Optional
-scipy          # For more advanced signal processing
-matplotlib     # For additional plotting/debug
+pandas
+plotly
+numpy
+python-dotenv
+pybluez
